--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "webpack-merge": "^5.10.0"
   },
   "dependencies": {
+    "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
